--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "argon2": "^0.31.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "prettier-plugin-prisma": "^5.0.0",
     "prisma": "^5.9.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
